crates/rtcom-tui/src/snapshots/rtcom_tui__app__tests__main_screen_80x24_menu_open_dimmed_overlay_snapshot.snap
---
source: crates/rtcom-tui/src/app.rs
expression: terminal.backend()
---
" rtcom 0.1.2   /dev/ttyUSB0  115200 8N1 none                                    "
"background line one                                                             "
"background line two                                                             "
"█                                                                               "
"                                                                                "
"                                                                                "
"                         ┌Configuration───────────────┐                         "
"                         │> Serial port setup         │                         "
"                         │  Line endings              │                         "
"                         │  Modem control             │                         "
"                         │----------------------------│                         "
"                         │  Write profile             │                         "
"                         │  Read profile              │                         "
"                         │----------------------------│                         "
"                         │  Screen options            │                         "
"                         │  Exit menu                 │                         "
"                         │                            │                         "
"                         └────────────────────────────┘                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ^A m menu · ^A ? help · ^A ^Q quit                                             "
