crates/rtcom-tui/src/snapshots/rtcom_tui__app__tests__main_screen_80x24_serial_port_setup_open_snapshot.snap
---
source: crates/rtcom-tui/src/app.rs
expression: terminal.backend()
---
" rtcom 0.1.2   /dev/ttyUSB0  115200 8N1 none                                    "
"█                                                                               "
"                                                                                "
"                  ┌Serial port setup─────────────────────────┐                  "
"                  │                                          │                  "
"                  │> Baud rate    115200                     │                  "
"                  │  Data bits    8                          │                  "
"                  │  Stop bits    1                          │                  "
"                  │  Parity       none                       │                  "
"                  │  Flow ctrl    none                       │                  "
"                  │                                          │                  "
"                  │------------------------------------------│                  "
"                  │                                          │                  "
"                  │  [Apply live]       (F2)                 │                  "
"                  │  [Apply + Save]     (F10)                │                  "
"                  │  [Cancel]           (Esc)                │                  "
"                  │                                          │                  "
"                  │                                          │                  "
"                  │                                          │                  "
"                  │                                          │                  "
"                  └──────────────────────────────────────────┘                  "
"                                                                                "
"                                                                                "
" ^A m menu · ^A ? help · ^A q quit                                              "
