crates/rtcom-tui/src/snapshots/rtcom_tui__app__tests__main_screen_80x24_with_serial_data_snapshot.snap
---
source: crates/rtcom-tui/src/app.rs
assertion_line: 423
expression: terminal.backend()
---
" rtcom 0.2.1   /dev/ttyUSB0  115200 8N1 none                                    "
"boot: starting...                                                               "
"ok                                                                              "
"█                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ^A m menu · ^A ? help · ^A ^Q quit                                             "
