crates/rtcom-tui/src/snapshots/rtcom_tui__app__tests__main_screen_80x24_with_toast_snapshot.snap
---
source: crates/rtcom-tui/src/app.rs
expression: terminal.backend()
---
" rtcom 0.1.2   /dev/ttyUSB0  115200 8N1 none                                    "
"i  profile saved: ~/.config/rtcom/default.toml                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ^A m menu · ^A ? help · ^A ^Q quit                                             "
